# custom-gpt-analysis

./: .gitignore  pyproject.toml
outputs/: automation_gpts.csv  cluster_diagram.md  cluster_taxonomy.md  cluster_visualization.html  cluster_visualization_with_tooltips.html  creative_content_image_analysis.csv  index.html  prompt_engineering_insights.md  sample_for_interaction_analysis.csv  sample_gpts.csv  serper_collected_gpts_cleaned.csv  serper_collected_gpts_deduplicated.csv  serper_collected_gpts_english_only.csv
outputs/clusters/: creative_content_generation.csv  educational_learning.csv  entertainment_gaming.csv  health_wellness.csv  legal_compliance.csv  niche_hobby_lifestyle.csv  personal_development_coaching.csv  productivity_organization.csv  professional_business_tools.csv  specialized_domain_experts.csv  spiritual_mystical.csv  technical_coding.csv  unclassified.csv  writing_content_marketing.csv
scripts/: add_tooltips.py  analyze_automation.py  analyze_image_generation.py  cluster_analysis.py  compare_urls.py  create_checkpoint.py  deduplicate_csv_fasttext.py  exa_gpt_collector.py  generate_complete_viz.py  segment_by_clusters.py  serper_gpt_collector_parallel.py
